syntax = "proto3";

package voi.event;
option go_package = "github.com/voi-oss/protoc-gen-event/pkg/options;options";

import "google/protobuf/descriptor.proto";

// EventOption represents all event-level options supported by the plugin.
message EventOption {
  // topic_names explicitly sets the name of the topic to publish the event to.
  string topic_name = 1;

  // skip indicates that the code generation process should ignore this event.
  bool skip = 2;

  // no_message_validation indicates that the validation done automatically at publication time should be disabled.
  bool no_message_validation = 3;
}

extend google.protobuf.MessageOptions {
  EventOption options = 50142;
}

// PIICategory describes the type of PII contained in a field.
enum PIICategory {
  // the field does not contain PII
  PII_NONE = 0;
  // unspecified type of PII
  PII_OTHER = 1;
  // first name, last name, ...
  PII_NAME = 2;
  // e-mail address
  PII_EMAIL = 3;
  // telephone number
  PII_PHONE = 4;
  // IP address
  PII_IP = 5;
  // some kind of device ID (ex: mobile phone identifier)
  PII_DEVICE_ID = 6;
  // some kind of document number (ex: driving license number, passport number, credit card fingerprint, ...)
  PII_DOCUMENT_NUMBER = 7;
}

// AccountType describes a user category.
enum AccountType {
  ACCOUNT_NONE = 0;
  ACCOUNT_OTHER = 1;
  ACCOUNT_RIDER = 2;
  ACCOUNT_HUNTER = 3;
}

message FieldOption {
  bool is_metadata = 1;
  string name = 2;
  bool inject_message_id = 3;
  PIICategory pii = 4;
  AccountType account_id = 5;
  bool inject_publish_time = 6;
}

extend google.protobuf.FieldOptions {
  FieldOption field = 50924;
}
